// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`all flights location fallback should return legs data by using locations fallback 1`] = `
Object {
  "data": Object {
    "allFlights": Object {
      "edges": Array [
        Object {
          "node": Object {
            "legs": Array [
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "TGVnOjMxMzIyNTIxMA==",
              },
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "TGVnOjMxMzM1NzM5Ng==",
              },
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "TGVnOkVKMjkyODU2MjA4OV80MjE4MDIzODg=",
              },
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "TGVnOkVKMjkyODU2MjA4OV8zNTk1MTM3NjU=",
              },
            ],
          },
        },
        Object {
          "node": Object {
            "legs": Array [
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "TGVnOkVKMTU3NDYxODM1M18zMDc5MzkyNjQ=",
              },
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "TGVnOjMxNDMxNjI0MA==",
              },
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "TGVnOjMxNjMyODg2OA==",
              },
            ],
          },
        },
        Object {
          "node": Object {
            "legs": Array [
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "TGVnOjMyMTMzNzkwMw==",
              },
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "TGVnOjMxNDMxNjI0MA==",
              },
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "TGVnOjMxNjMyODg2OA==",
              },
            ],
          },
        },
      ],
    },
  },
}
`;

exports[`all flights location fallback should return legs data by using locations fallback with multiple locations 1`] = `
Object {
  "data": Object {
    "allFlights": Object {
      "edges": Array [
        Object {
          "node": Object {
            "legs": Array [
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "TGVnOkVPNjMwMDkxMzUyXzk5MDIwMjY5",
              },
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "TGVnOjMxNTU4ODMwMw==",
              },
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "TGVnOjMwODM0MTczOA==",
              },
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "TGVnOjMwODQzMzk4OA==",
              },
            ],
          },
        },
        Object {
          "node": Object {
            "legs": Array [
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "TGVnOkVUMTIyODM0ODA0Nl8yMjIzOTE0NTA=",
              },
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "TGVnOkVUMTIyODM0ODA0Nl8xNzE3MjAyNDA=",
              },
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "TGVnOjMwODM0MTczOA==",
              },
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "TGVnOjMwODQzMzk4OA==",
              },
            ],
          },
        },
        Object {
          "node": Object {
            "legs": Array [
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "TGVnOkVUMjY0MjYyNjU3NF8yMDM4NjUzMzk=",
              },
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "TGVnOkVUMjY0MjYyNjU3NF8yMjAyMTc1MzM=",
              },
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "TGVnOjMwODM0MTczOA==",
              },
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "TGVnOjMwODQzMzk4OA==",
              },
            ],
          },
        },
      ],
    },
  },
}
`;
